fix #524 button alignment

--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -136,6 +136,7 @@
 .v2-hero__buttons-wrapper {
   display: inline-flex;
   flex-flow: column wrap;
+  align-items: center;
   gap: 24px;
   padding: 24px 0 0;
 }
